# learning-haskell

./: .gitignore  EvenOnly.hs  FibStream.hs  FilterDisj.hs  FindDigit.hs  LengthList.hs  LogLevel.hs  MeanList.hs  Monads.hs  ProcessData.hs  README.md  ReadDigits.hs  RevRange.hs  Shapes.hs  Simple.hs  SumOdd.hs
GPWH/lesson21/: helloPerson.hs
GPWH/lesson23/: bg_highlight.hs
HID/RPN/: .gitignore  ChangeLog.md  RPN.cabal  package.yaml
HID/dicegame/: .gitignore  ChangeLog.md  README.md  dicegame.cabal  package.yaml
HID/du/: .gitignore  du.cabal  package.yaml
HID/locator/: .gitignore  ChangeLog.md  locator.cabal  package.yaml
HID/rock-paper-scissors/: .gitignore  ChangeLog.md  package.yaml  rock-paper-scissors.cabal
HID/shakespeare/: .gitignore  ChangeLog.md  package.yaml  shakespeare.cabal
HID/shownread/: .gitignore  ChangeLog.md  README.md  package.yaml  shownread.cabal
HID/shunting-yard/: .gitignore  package.yaml  shunting-yard.cabal
HID/stoquodata/: .gitignore  ChangeLog.md  (+4 more)
__old/: Functors.hs  MaybeToList.hs  NewMaybe.hs  RevRange.hs
exercism/: README.md
futurelearn/: cases.hs  factorial.hs  guards.hs  starman.hs
hackerrank/: evalE.hs  printN.hs
learnyouahaskell/: KnightQuest.hs  birds.hs  bytestringcopy.hs  capslocker.hs  deletetodo.hs  fmapping_io.hs  funcomp.hs  palindromes.hs  quickestpath.hs  rpn.hs  todo.hs  todo.txt  words.hs  words.txt  wordsWithFile.hs
realworld/ch05/jsonh.hsproj/jsonh/: jsonh.cabal
rio/: HelloRio.hs
stepik/: Coords.hs  Person.hs  ReadDigits.hs  Simple.hs  Xor.hs
tui-base/: tui.cabal
udemy/: expr.hs
(+529 files in other folders)
