name: jsonh
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
maintainer: Gerd Reiss
stability: experimental
category: JSON printing
author: Gerd Reiss
x-ghc-framework-version: 8.0.2-9.6-2
x-last-ide-version: HfM1.6.1

library
    build-depends:
        base -any
    default-language: Haskell2010
    hs-source-dirs: lib
    other-modules:
        PrettyJSON
        SimpleJSON
        Prettify
        PutJSON

